@@ -1,3 +1,9 @@
+2005-06-04  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c: define _O_BINARY ourselves if
+	it's not defined by any headers, and use that instead of #ifdefed
+	calls to g_open.
+
 2005-06-04  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpwidgets-utils.c (gimp_text_buffer_load):
